# project-templates

./: .gitignore  .mise.toml  .prettierignore  Cargo.toml  README.md  package.json  rustfmt.toml
.cargo/: config.toml
